--- a/officer.html
+++ b/officer.html
@@ -135,7 +135,7 @@
             <h2>Palisades Park Rep: Irene Choi</h2>
             <br />
             As the Palisade Park Representative, Irene Choi serves as the
-            link between our organization and the Palisdaes Park33333333333333333333333333333333 community, ensuring
+            link between our organization and the Palisdaes Park community, ensuring
             their voices are heard and their needs are addressed.
             <br> <br> <h4>Main Subject Focus - Math and Reading Tutoring</h4>
           </td>
