--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UI Tutoring 3</title>
+    <title>UI Tutoring </title>
     <!--Favicon-->
     <link rel="icon" type="image/x-icon" href="resources/cropped logo.png" />
 
@@ -101,10 +101,7 @@
               SIGNUP
             </h1>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia
-              animi non ea, dolore necessitatibus repellendus recusandae tempora
-              asperiores maiores! Ipsa quaerat unde tenetur delectus possimus
-              facilis hic illo laboriosam consequuntur.
+              Are you looking to improve your grades and gain a deeper understanding of your subjects? Sign up for our tutoring program! Our experienced tutors are here to provide personalized support tailored to your unique learning style and academic needs. Whether you need help with math, science, literature, or any other subject, we are committed to helping you succeed.  
             </p>
             <br>
             <br>
@@ -118,10 +115,7 @@
               SIGNUP
             </h1>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia
-              animi non ea, dolore necessitatibus repellendus recusandae tempora
-              asperiores maiores! Ipsa quaerat unde tenetur delectus possimus
-              facilis hic illo laboriosam consequuntur.
+              Are you passionate about helping others succeed academically? Join our tutoring team! We are looking for knowledgeable and dedicated individuals to provide personalized academic support to students. As a tutor, you will have the opportunity to make a positive impact on students' lives, helping them to understand complex subjects and achieve their academic goals. If you have expertise in subjects like math, science, literature, or any other area, and a commitment to teaching, we would love to have you on our team.
             </p>
             <br>
             <br>
