--- a/terms.html
+++ b/terms.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>UI Tutoring 3</title>
+    <title>UI Tutoring </title>
     <!--Favicon-->
     <link rel="icon" type="image/x-icon" href="resources/cropped logo.png" />
 
